z-index of navbar fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,6 +101,7 @@ display: inline;
 }
 
 .navbar-fixed {
+		z-index:1000;
     height: 128px;
 }
 
